--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     id="bowser-model"
                     scale="0.2887139071929488 0.2887139071929488 0.2887139071929488"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="assets/monster.glb"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
