--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <a href="assets/sneaker_airforce.usdz" rel="ar">
     View in AR
   </a>
+  <br>
+  <button id="viewInAR">View in AR</button>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
