--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-  <a href="assets/sneaker_airforce.usdz" rel="ar">
+  <a href="assets/monster.usdz" rel="ar">
     View in AR
   </a>
   <br>
